--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -31,15 +31,14 @@
   <table class="table">
     <thead>
       <tr>
-        <th>Child's Name</th>
-        <th>Child's Class</th>
+        <th>Name</th>
+        <th>Class</th>
         <th>Email</th>
-        <th>Payment Information</th>
+        <th>Phone Number</th>
         <th>Price</th>
         <th>Quantity</th>
         <th>Options</th>
-        <th>Status</th>
-        <th>Actions</th>
+        <th>Payment Status</th>
         <th>Created At</th>
       </tr>
     </thead>
@@ -49,7 +48,7 @@
           <td><%= order.kid_name %></td>
           <td><%= order.kid_class %></td>
           <td><%= order.email %></td>
-          <td><%= order.payment_info %></td>
+          <td><%= order.phone_number %></td>
           <td><%= order.product.price %></td>
           <td><%= order.quantity %></td>
           <td>
@@ -66,7 +65,7 @@
                 <p>No options selected.</p>
             <% end %>
           </td>
-          <td><%= order.status %></td>
+          <td><%= order.payment_status %></td>
          
           <td><%= order.created_at.strftime("%B %d, %Y") %></td>
         </tr>
