--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,4 +2,4 @@
 <p>Order ID: <%= @order.id %></p>
 <p>Product: <%= @order.product.name %></p>
 <p>Quantity: <%= @order.quantity %></p>
-<p>Status: <%= @order.status %></p>
+<p>Status: <%= @order.payment_status %></p>
